[package]
name = "sr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
csv = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
